delete participant from tournament, refactor tournament status
