# apps/backend/swagger.json
@@ -10,7 +10,7 @@
             "required": true,
             "in": "path",
             "schema": {
-              "type": "number"
+              "type": "string"
             }
           }
         ],
@@ -39,7 +39,7 @@
             "required": true,
             "in": "path",
             "schema": {
-              "type": "number"
+              "type": "string"
             }
           }
         ],
@@ -78,7 +78,7 @@
             "required": true,
             "in": "path",
             "schema": {
-              "type": "number"
+              "type": "string"
             }
           }
         ],
@@ -191,8 +191,11 @@
               "items": {
                 "type": "string",
                 "enum": [
-                  "Setup",
-                  "Started",
+                  "AddPlayers",
+                  "CreateFirstRound",
+                  "FirstRoundStarted",
+                  "CreateSecondRound",
+                  "SecondRoundStarted",
                   "Over"
                 ]
               }
@@ -282,7 +285,7 @@
             "required": true,
             "in": "path",
             "schema": {
-              "type": "number"
+              "type": "string"
             }
           }
         ],
@@ -311,7 +314,7 @@
             "required": true,
             "in": "path",
             "schema": {
-              "type": "number"
+              "type": "string"
             }
           }
         ],
@@ -350,7 +353,7 @@
             "required": true,
             "in": "path",
             "schema": {
-              "type": "number"
+              "type": "string"
             }
           }
         ],
@@ -585,16 +588,45 @@
         ]
       }
     },
-    "/participant/{tournamentId}": {
-      "post": {
-        "operationId": "ParticipantController_addParticipantToTournament",
+    "/participantTournament/{tournamentId}": {
+      "get": {
+        "operationId": "ParticipantTournamentController_findByTournamentId",
         "parameters": [
           {
             "name": "tournamentId",
             "required": true,
             "in": "path",
             "schema": {
-              "type": "number"
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ParticipantTournamentsResponse"
+                }
+              }
+            }
+          }
+        },
+        "summary": "Get participants by tournamentId",
+        "tags": [
+          "participantTournament"
+        ]
+      },
+      "post": {
+        "operationId": "ParticipantTournamentController_addParticipantToTournament",
+        "parameters": [
+          {
+            "name": "tournamentId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
             }
           }
         ],
@@ -622,20 +654,28 @@
         },
         "summary": "Create a new participant for a tournament",
         "tags": [
-          "participant"
+          "participantTournament"
         ]
       }
     },
-    "/participantTournament/{tournamentId}": {
-      "get": {
-        "operationId": "ParticipantTournamentController_findByTournamentId",
+    "/participantTournament/{tournamentId}/{participantId}": {
+      "delete": {
+        "operationId": "ParticipantTournamentController_deleteParticipantFromTournament",
         "parameters": [
+          {
+            "name": "participantId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          },
           {
             "name": "tournamentId",
             "required": true,
             "in": "path",
             "schema": {
-              "type": "number"
+              "type": "string"
             }
           }
         ],
@@ -645,13 +685,13 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ParticipantTournamentsResponse"
+                  "$ref": "#/components/schemas/BaseResponse"
                 }
               }
             }
           }
         },
-        "summary": "Get participants by tournamentId",
+        "summary": "Delete a participant from a tournament",
         "tags": [
           "participantTournament"
         ]
@@ -671,8 +711,11 @@
       "TournamentStatus": {
         "type": "string",
         "enum": [
-          "Setup",
-          "Started",
+          "AddPlayers",
+          "CreateFirstRound",
+          "FirstRoundStarted",
+          "CreateSecondRound",
+          "SecondRoundStarted",
           "Over"
         ]
       },
@@ -1368,7 +1411,7 @@
             "type": "string"
           },
           "status": {
-            "default": "Setup",
+            "default": "AddPlayers",
             "allOf": [
               {
                 "$ref": "#/components/schemas/TournamentStatus"
@@ -1385,7 +1428,7 @@
           "createdAt": {
             "type": "string",
             "format": "date-time",
-            "default": "2025-10-11T21:03:29.431Z"
+            "default": "2025-10-12T17:28:13.875Z"
           }
         },
         "required": [
@@ -1400,7 +1443,7 @@
             "type": "string"
           },
           "status": {
-            "default": "Setup",
+            "default": "AddPlayers",
             "allOf": [
               {
                 "$ref": "#/components/schemas/TournamentStatus"
@@ -1417,7 +1460,7 @@
           "createdAt": {
             "type": "string",
             "format": "date-time",
-            "default": "2025-10-11T21:03:29.411Z"
+            "default": "2025-10-12T17:28:13.849Z"
           }
         }
       },
@@ -1506,7 +1549,7 @@
           "createdAt": {
             "type": "string",
             "format": "date-time",
-            "default": "2025-10-11T21:03:30.037Z"
+            "default": "2025-10-12T17:28:14.405Z"
           }
         },
         "required": [
@@ -1545,7 +1588,7 @@
           "createdAt": {
             "type": "string",
             "format": "date-time",
-            "default": "2025-10-11T21:03:30.049Z"
+            "default": "2025-10-12T17:28:14.418Z"
           }
         }
       },
